[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Art/start-assets/background.png" type="Texture" id=1]
[ext_resource path="res://Source/Gravity/Script/GravityField.gd" type="Script" id=2]
[ext_resource path="res://Resources/Art/Fleche_blanche.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 98, 75 )

[node name="GravityField" type="Area2D"]
position = Vector2( 502, 292 )
space_override = 3
gravity = 1.0
collision_layer = 16
collision_mask = 11
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.635294 )
scale = Vector2( 0.102604, 0.139815 )
texture = ExtResource( 1 )

[node name="IndicateurGrav" type="Sprite" parent="Sprite"]
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 3 )
flip_v = true

[node name="IndicateurGrav2" type="Sprite" parent="Sprite"]
position = Vector2( 800, 415 )
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 3 )
flip_v = true

[node name="IndicateurGrav3" type="Sprite" parent="Sprite"]
position = Vector2( 0, 415 )
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 3 )
flip_v = true

[node name="IndicateurGrav4" type="Sprite" parent="Sprite"]
position = Vector2( -800, 415 )
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 3 )
flip_v = true

[node name="IndicateurGrav5" type="Sprite" parent="Sprite"]
position = Vector2( -800, 0 )
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 3 )
flip_v = true

[node name="IndicateurGrav6" type="Sprite" parent="Sprite"]
position = Vector2( 800, 0 )
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 3 )
flip_v = true

[node name="IndicateurGrav7" type="Sprite" parent="Sprite"]
position = Vector2( 799.188, -414.834 )
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 3 )
flip_v = true

[node name="IndicateurGrav8" type="Sprite" parent="Sprite"]
position = Vector2( -799.189, -414.834 )
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 3 )
flip_v = true

[node name="IndicateurGrav9" type="Sprite" parent="Sprite"]
position = Vector2( 0, -415 )
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 3 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_GravityField_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_GravityField_mouse_exited"]
